--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,11 @@ jobs:
   include:
     - stage: test
       script: npm run test
+deploy:
+  provider: heroku
+  api_key:
+    secure: "ef6a0c9b-fe87-47d8-8697-5230a0be2e68"
+    app: travisaria
+    on: main
+    run: 
+      - restart
